tests/paczka1/small_fuzzy/16232161.err
Error in line 2: LdVcSJv S269 87,6
Error in line 3: KwFR4FO S269 16,2
